melhorias no programa